[project]
name = "tts-server"
version = "0.1.0"
description = "XTTS-v2 streaming TTS server with WebSocket support"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "coqui-tts>=0.24.2,<0.26.0",
    "transformers>=4.46.0,<5.0.0",
    "torch==2.7.1+cu126",
    "torchaudio==2.7.1+cu126",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "scipy>=1.7.0",
    "websockets>=16.0",
    "soundfile>=0.12.0",
    "librosa>=0.9.0",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
